# redesigned

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  run.py
backtester/include/: Context.h  DataHandler.h  Engine.h  Event.h  ExecutionHandler.h  Portfolio.h  Strategy.h  Types.h
backtester/src/: Engine.cpp  ExecutionHandler.cpp
db/: __init__.py  connection.py  example_usage.py  models.py  operations.py
src/: Context.py  Engine.py  Events.py  ExecutionHandler.py  Portfolio.py  Strategy.py  Types.py
tests/: EngineTest.cpp  ExecutionHandlerBehaviorTest.cpp  ExecutionHandlerTest.cpp
